# TO_PROYECTO

./: .gitignore  LICENSE  README.md  TO_PROYECTO.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Filtrador/: CMakeLists.txt  form.cpp  form.ui  login.cpp  login.ui  windows.cpp  windows.ui
Forms/: CMakeLists.txt  forms.ui.autosave  login.cpp  login.h  login.ui  maintenance.cpp  maintenance.h  maintenance.ui  maintenance.ui.autosave  register.cpp  register.h  register.ui
NewLogin/: NewLogin.pro  filehandler.h  form.cpp  login.cpp  login.h  login.ui
PeruCOVID19_Analytics_App/: CMakeLists.txt  main.cpp
PeruCOVID19_Analytics_App/data/: exceldeprueba.csv
PeruCOVID19_Analytics_App/includes/GUI/: FormularioAutenticacion.H
PeruCOVID19_Analytics_App/includes/dataStructures/: avl_tree.h  pila.h
PeruCOVID19_Analytics_App/includes/fileHandling/: CSVHandler.h
PeruCOVID19_Analytics_App/includes/model/: registroCovid.h
PeruCOVID19_Analytics_App/src/GUI/: main.cpp  mainwindow.cpp
PeruCOVID19_Analytics_App/src/GUI/estadisticas/porDepartamento/: formestadisticasdepartamento.cpp  formestadisticasdepartamento.h  formestadisticasdepartamento.ui
PeruCOVID19_Analytics_App/src/GUI/estadisticas/porResultado/: formestadisticaresultado.cpp  formestadisticaresultado.h  formestadisticaresultado.ui
PeruCOVID19_Analytics_App/src/GUI/estadisticas/porSexo/: formestadisticassexo.cpp  formestadisticassexo.h  formestadisticassexo.ui
PeruCOVID19_Analytics_App/src/GUI/estadisticas/porTipoMuestra/: formestadisticatipomuestra.cpp  formestadisticatipomuestra.h  formestadisticatipomuestra.ui
PeruCOVID19_Analytics_App/src/dataStructures/: avl_tree.cpp  pila.cpp  pila.h  pila_test.cpp  test_avl_tree.cpp
PeruCOVID19_Analytics_App/src/fileHandling/: CSVHandler.cpp  fileMainPrueba.cpp
PeruCOVID19_Analytics_App/src/model/: registroCovid.cpp
PeruCOVID19_Analytics_App/tests/: CMakeLists.txt
PeruCOVID19_Analytics_App/ui/GUI/: mainwindow.ui
back/BASE_DATOS/: user.json
back/modulos/handlerFile/domain/: FileRepository.h  JsonFileRepository.h
back/modulos/handlerFile/infraestructure/: JsonFileRepository.cpp
back/modulos/search/application/: DynamiCriteria.h  agecriteria.cpp  agecriteria.h  andcriteria.cpp  andcriteria.h  orcriteria.cpp  orcriteria.h  resultcriteria.cpp  resultcriteria.h  sexcriteria.cpp  sexcriteria.h
back/modulos/search/domain/: pruebacovid.cpp  pruebacovid.h
back/modulos/upload/: avltree.cpp  avltree.h  avltreeworker.cpp  avltreeworker.h  nodeavl.cpp  nodeavl.h
back/modulos/user/application/: containuser.cpp  containuser.h  createuser.cpp  createuser.h  verifyuser.cpp  verifyuser.h
back/modulos/user/domain/: IUserRepository.h  user.cpp  user.h
back/modulos/user/infraestructure/: userfilerepository.cpp  userfilerepository.h
front/GUI/: login.ui  signin.ui  windowsearch.ui  windowupload.ui
front/search/: windowsearch.cpp  windowsearch.h
front/upload/: windowupload.cpp  windowupload.h
front/user/: login.cpp  login.h  signin.cpp
login/: filehandler.cpp  form.cpp  form.h  form.ui  login.cpp  login.h  login.ui  register.csv
shared/BST/: bst.cpp  bst.h  nodobst.cpp  nodobst.h
shared/DoubleLinkedList/: doublelinkedlist.cpp  doublelinkedlist.h  nododoublelist.cpp  nododoublelist.h
